<resources>
    <string name="app_name">MyPistachio</string>
    <string name="todo">TODO</string>
    
    <string name="user_name_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登陆</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="welcome">Welcome to Stream -An entertainment platform that connects viewers together</string>

</resources>
